--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,9 @@
 html{
-    background-color: rgba(134, 103, 92, 0.993);
+    background-color:cornsilk;
 }
 body{
     height: 100%;
-    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqVUOCt1t98KAPIByzUw5wufcHAegXIR-fZg&usqp=CAU);
+    background-image: url(https://i.pinimg.com/originals/8c/b5/dc/8cb5dc796dc93b828a0634403fbe5381.jpg);
     margin-top: 40px;
     padding: 60px;
     
@@ -49,7 +49,7 @@ body{
     box-sizing: content-box;
 }
 .row form .div-group:nth-child(2) button{
-    background-color:darksalmon;
+    background-color:rgb(224, 169, 150);
     padding: 8px 20px;
     margin: 15px;
     border-radius: 15px;
