--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 html{
-    background-color:cornsilk;
+    background-color:rgb(247, 82, 170);
 }
 body{
     height: 100%;
@@ -26,7 +26,7 @@ body{
 
 }
 .row form .div-group h2{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1.8rem;
     margin-top: 40px;
     text-align: center;
@@ -49,7 +49,7 @@ body{
     box-sizing: content-box;
 }
 .row form .div-group:nth-child(2) button{
-    background-color:rgb(224, 169, 150);
+    background-color:rgb(211, 209, 209);
     padding: 8px 20px;
     margin: 15px;
     border-radius: 15px;
